--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  repository_dispatch:
+    types: [tests-generated]
 
 jobs:
   build:
@@ -12,6 +14,86 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Download generated tests from Python project
+      if: github.event_name == 'repository_dispatch' || github.event_name == 'push'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        REPO_OWNER="S24013580"
+        REPO_NAME="QualityGate-AI"
+        ARTIFACT_NAME="generated-java-tests"
+        
+        # Determine which workflow run to use
+        if [ "${{ github.event_name }}" == "repository_dispatch" ]; then
+          # Use the workflow run ID from the dispatch payload
+          RUN_ID="${{ github.event.client_payload.workflow_run_id }}"
+          if [ -n "$RUN_ID" ] && [ "$RUN_ID" != "null" ]; then
+            echo "Using workflow_run ID from dispatch: $RUN_ID"
+          else
+            RUN_ID=""
+          fi
+        fi
+        
+        # If no RUN_ID from dispatch, find the latest successful workflow run
+        if [ -z "$RUN_ID" ] || [ "$RUN_ID" == "null" ]; then
+          echo "Fetching latest workflow run from $REPO_OWNER/$REPO_NAME..."
+          RUN_ID=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/actions/runs?per_page=5&status=success" \
+            | jq -r '.workflow_runs[] | select(.name == "CI") | .id' | head -1)
+        fi
+        
+        if [ -z "$RUN_ID" ] || [ "$RUN_ID" == "null" ]; then
+          echo "No workflow run found. Skipping test download."
+          exit 0
+        fi
+        
+        echo "Using workflow run ID: $RUN_ID"
+        
+        # Get the artifact ID
+        ARTIFACT_ID=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+          "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/actions/runs/$RUN_ID/artifacts" \
+          | jq -r ".artifacts[] | select(.name == \"$ARTIFACT_NAME\") | .id")
+        
+        if [ -z "$ARTIFACT_ID" ] || [ "$ARTIFACT_ID" == "null" ]; then
+          echo "Artifact '$ARTIFACT_NAME' not found in run $RUN_ID. Skipping test download."
+          exit 0
+        fi
+        
+        echo "Found artifact ID: $ARTIFACT_ID"
+        
+        # Create directory for tests
+        mkdir -p src/test/java
+        
+        # Download and extract the artifact
+        curl -L -H "Authorization: token $GITHUB_TOKEN" \
+          -H "Accept: application/vnd.github+json" \
+          -o /tmp/tests.zip \
+          "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/actions/artifacts/$ARTIFACT_ID/zip"
+        
+        if [ -f /tmp/tests.zip ]; then
+          echo "Extracting tests to src/test/java..."
+          unzip -q /tmp/tests.zip -d /tmp/tests || true
+          # Copy tests preserving package structure
+          if [ -d "/tmp/tests/com" ]; then
+            cp -r /tmp/tests/com src/test/java/ 2>/dev/null || true
+            echo "Tests extracted to src/test/java/com/"
+          elif [ -d "/tmp/tests" ]; then
+            # Try to find Java files and copy with structure
+            find /tmp/tests -name "*.java" -type f | while read file; do
+              rel_path=${file#/tmp/tests/}
+              target_dir="src/test/java/$(dirname "$rel_path")"
+              mkdir -p "$target_dir"
+              cp "$file" "$target_dir/"
+            done
+            echo "Tests extracted to src/test/java/"
+          fi
+          echo "✅ Tests downloaded successfully"
+          find src/test/java -name "*Test.java" | wc -l | xargs echo "Found test files:"
+        else
+          echo "⚠️ Failed to download artifact. Continuing without generated tests."
+        fi
+      continue-on-error: true
     
     - name: Set up JDK 11
       uses: actions/setup-java@v4
@@ -43,7 +125,7 @@ jobs:
     
     - name: Enforce coverage thresholds
       run: mvn verify
-      continue-on-error: true
+      continue-on-error: false
       env:
         MAVEN_OPTS: -Xmx2048m
     
@@ -74,7 +156,7 @@ jobs:
       if: always()
     
     - name: Run mutation testing
-      run: mvn org.pitest:pitest-maven:mutationCoverage
+      run: mvn org.pitest:pitest-maven:mutationCoverage || echo "Mutation testing completed with warnings"
       continue-on-error: true
     
     - name: Upload mutation reports
