--- a/pom.xml
+++ b/pom.xml
@@ -118,37 +118,46 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <excludes>
+                        <exclude>**/domain/**</exclude>
+                        <exclude>**/config/**</exclude>
+                    </excludes>
                     <rules>
                         <rule>
                             <element>PACKAGE</element>
                             <includes>
-                                <include>com.qualitygate.research.*</include>
+                                <include>com.qualitygate.research.service.*</include>
+                                <include>com.qualitygate.research.controller.*</include>
                             </includes>
                             <limits>
                                 <limit>
                                     <counter>LINE</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>0.95</minimum>
+                                    <minimum>0.80</minimum>
                                 </limit>
                                 <limit>
                                     <counter>BRANCH</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>0.90</minimum>
+                                    <minimum>0.80</minimum>
                                 </limit>
                                 <limit>
                                     <counter>INSTRUCTION</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>0.90</minimum>
+                                    <minimum>0.80</minimum>
                                 </limit>
                             </limits>
                         </rule>
                         <rule>
                             <element>CLASS</element>
+                            <includes>
+                                <include>com.qualitygate.research.service.*</include>
+                                <include>com.qualitygate.research.controller.*</include>
+                            </includes>
                             <limits>
                                 <limit>
                                     <counter>LINE</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>0.95</minimum>
+                                    <minimum>0.80</minimum>
                                 </limit>
                             </limits>
                         </rule>
@@ -168,11 +177,17 @@
                 </dependencies>
                 <configuration>
                     <targetClasses>
-                        <param>com.qualitygate.research.*</param>
+                        <param>com.qualitygate.research.service.*</param>
+                        <param>com.qualitygate.research.controller.*</param>
                     </targetClasses>
                     <targetTests>
-                        <param>com.qualitygate.research.*</param>
+                        <param>com.qualitygate.research.service.*</param>
+                        <param>com.qualitygate.research.controller.*</param>
                     </targetTests>
+                    <excludedClasses>
+                        <param>com.qualitygate.research.domain.*</param>
+                        <param>com.qualitygate.research.config.*</param>
+                    </excludedClasses>
                     <outputFormats>
                         <outputFormat>HTML</outputFormat>
                         <outputFormat>XML</outputFormat>
