--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,3 +162,107 @@ jobs:
         name: mutation-reports
         path: target/pit-reports/
       if: always()
+    
+    - name: Build JAR
+      run: mvn clean package -DskipTests
+      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    
+    - name: Upload JAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: application-jar
+        path: target/*.jar
+        retention-days: 30
+      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up JDK 11
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    
+    - name: Download JAR artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: application-jar
+        path: target/
+    
+    - name: Publish to GitHub Packages
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        server-id: github
+        settings-path: ${{ github.workspace }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        mkdir -p ${{ github.workspace }}/.m2
+        cat > ${{ github.workspace }}/.m2/settings.xml <<EOF
+        <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+          http://maven.apache.org/xsd/settings-1.0.0.xsd">
+          <servers>
+            <server>
+              <id>github</id>
+              <username>${{ github.actor }}</username>
+              <password>${{ secrets.GITHUB_TOKEN }}</password>
+            </server>
+          </servers>
+        </settings>
+        EOF
+        mvn deploy -DskipTests \
+          -DaltDeploymentRepository=github::https://maven.pkg.github.com/${{ github.repository }}
+    
+    - name: Set up Docker Buildx
+      if: env.DOCKER_HUB_USERNAME != ''
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build Docker image
+      if: env.DOCKER_HUB_USERNAME != ''
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: false
+        tags: |
+          ${{ secrets.DOCKER_HUB_USERNAME }}/qualitygate-research:${{ github.sha }}
+          ${{ secrets.DOCKER_HUB_USERNAME }}/qualitygate-research:latest
+        cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/qualitygate-research:buildcache
+        cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/qualitygate-research:buildcache,mode=max
+      env:
+        DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+    
+    - name: Login to Docker Hub
+      if: env.DOCKER_HUB_USERNAME != ''
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    
+    - name: Push Docker image
+      if: env.DOCKER_HUB_USERNAME != ''
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ secrets.DOCKER_HUB_USERNAME }}/qualitygate-research:${{ github.sha }}
+          ${{ secrets.DOCKER_HUB_USERNAME }}/qualitygate-research:latest
+      env:
+        DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
